Fix modernizer issues